--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -6,7 +6,7 @@
             <h4>Over Ons</h4>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates minima hic similique atque.</p>
             <div class="social-media">
-                <ul>
+                <ul class="socials">
                     <li><a href="#">Facebook</a></li>
                     <li><a href="#">Instagram</a></li>
                     <li><a href="#">LinkedIn</a></li>
