--- a/views/trendingworkouts.ejs
+++ b/views/trendingworkouts.ejs
@@ -7,12 +7,13 @@
 
     <link rel="stylesheet" href="/stylesheets/navbar.css" />
     <link rel="stylesheet" href="/stylesheets/trendingworkouts.css" />
+    <link rel="stylesheet" href="/stylesheets/styles.css">
   </head>
 
   <body>
 
-   <!-- include maakt het overzichtelijker om alles toe te voegen, want dan kan je een section gewoon in een aparte file zetten-->
-<%-include ('nav.ejs')%> 
+   <!-- include maakt het overzichtelijker om alles toe te voegen-->
+    <%-include ('nav.ejs')%> 
 
     <main>
       <!--Main Body Content-->
