--- a/public/stylesheets/overzicht.css
+++ b/public/stylesheets/overzicht.css
@@ -82,6 +82,7 @@
         overflow: hidden;
         margin-top: 2em;
         filter: drop-shadow(rgb(25, 25, 25) 0rem 1rem 20px);
+        animation: fade-inout 1.5s;
     }
 
     .banner {
@@ -135,7 +136,7 @@
         width: 50px;
         height: 50px;
         border-radius: 50%;
-         filter: drop-shadow(rgb(25, 25, 25) 1px 5px 8px);
+        filter: drop-shadow(rgb(25, 25, 25) 1px 5px 8px);
     }
 
 
