--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/stylesheets/styles.css">
+    <link rel="stylesheet" href="/stylesheets/navbar.css">
+    <link rel="stylesheet" href="/stylesheets/loginsignup.css">
     <title>Sign Up</title>
 </head>
 <body>
@@ -28,6 +31,7 @@
         <label for="profileImage">Profile Image:</label>
         <input type="file" id="profileImage" name="profileImage"><br>
         <button type="submit">Sign Up</button>
+        <p class="noAccount">Already have a account? Sign in <a href="/login">here</a></p>
     </form>
 </body>
 </html>
