--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,4 +1,4 @@
-
+<link rel="stylesheet" href="/stylesheets/navbar.css" />
     <header>
         <!--HamBurger Icon-->
         <div class="bars" id="nav-action">
