--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="/stylesheets/banner.css" />
   </head>
   <body>
-
-    <%-include ('nav.ejs')%> 
+    
+<header>
+  <%-include ('nav.ejs')%> 
+</header>
+  
 
     <Main>
      
