--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/stylesheets/navbar.css" />
+
     <header>
         <!--HamBurger Icon-->
         <div class="bars" id="nav-action">
@@ -19,3 +20,5 @@
             </ul>
         </nav>
     </header>
+
+    <script src="/stylesheets/scripts/index.js"></script>
