--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/stylesheets/banner.css" />
   </head>
   <body>
-    
+
 <header>
   <%-include ('nav.ejs')%> 
 </header>
@@ -19,6 +19,8 @@
     <%-include ('banner.ejs')%> 
 
     </Main>
+
+    <%-include ('footer.ejs')%> 
   </body>
   <script src="/fit-buddy/public/stylesheets/js/index.js"></script>
 </html>
