--- a/views/banner.ejs
+++ b/views/banner.ejs
@@ -4,9 +4,9 @@
     <div class="list">
         <div class="item" style="background-image: url(/stylesheets/images/arms.jpeg);">
             <div class="content">
-                <div class="title">SLIDER</div>
-                <div class="name">ARMEN</div>
-                <div class="des">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</div>
+                <h3 class="title">SLIDER</h3>
+                <h4 class="name">info</h4>
+                <p class="des"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</p>
                 <div class="btn">
                     <button>See More</button>
                     <button>Maak Een Plan</button>
@@ -16,9 +16,9 @@
         
         <div class="item" style="background-image: url(/stylesheets/images/Untitled-14.png);">
             <div class="content">
-                <div class="title">CRUNCHES</div>
-                <div class="name">YEAH</div>
-                <div class="des">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</div>
+                <h3 class="title">SLIDER</h3>
+                <h4 class="name">info</h4>
+                <p class="des"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</p>
                 <div class="btn">
                     <button>See More</button>
                     <button>Maak Een Plan</button>
@@ -26,11 +26,11 @@
             </div>
         </div>
         
-        <div class="item" style="background-image: url(/stylesheets/images/armsfoto.png);">
+        <div class="item" style="background-image: url(/stylesheets/images/victor-freitas-WvDYdXDzkhs-unsplash.jpg);">
             <div class="content">
-                <div class="title">ARMS</div>
-                <div class="name">Mooie armen</div>
-                <div class="des">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</div>
+                <h3 class="title">SLIDER</h3>
+                <h4 class="name">info</h4>
+                <p class="des"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</p>
                 <div class="btn">
                     <button>See More</button>
                     <button>Maak Een Plan</button>
@@ -38,11 +38,11 @@
             </div>
         </div>
         
-        <div class="item" style="background-image: url(/stylesheets/images/arsms.png);">
+        <div class="item" style="background-image: url(/stylesheets/images/gabin-vallet-J154nEkpzlQ-unsplash.jpg);">
             <div class="content">
-                <div class="title">MEER ARMEN</div>
-                <div class="name">WOW ARMEN</div>
-                <div class="des">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</div>
+                <h3 class="title">SLIDER</h3>
+                <h4 class="name">info</h4>
+                <p class="des"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</p>
                 <div class="btn">
                     <button>See More</button>
                     <button>Maak Een Plan</button>
@@ -52,9 +52,9 @@
         
         <div class="item" style="background-image: url(/stylesheets/images/abs.jpeg);">
             <div class="content">
-                <div class="title">ABS</div>
-                <div class="name">GOEIE SIXPACK</div>
-                <div class="des">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</div>
+                <h3 class="title">SLIDER</h3>
+                <h4 class="name">info</h4>
+                <p class="des"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</p>
                 <div class="btn">
                     <button>See More</button>
                     <button>Maak Een Plan</button>
@@ -62,11 +62,11 @@
             </div>
         </div>
         
-        <div class="item" style="background-image: url(/stylesheets/images/subhaan-saleem-Jf7hr7ZQzg8-unsplash.jpg);">
+        <div class="item" style="background-image: url(/stylesheets/images/luis-reyes-mTorQ9gFfOg-unsplash.jpg);">
             <div class="content">
-                <div class="title">GEKKE JAHEEM</div>
-                <div class="name">Wat een coole gast</div>
-                <div class="des">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</div>
+                <h3 class="title">SLIDER</h3>
+                <h4 class="name">info</h4>
+                <p class="des"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</p>
                 <div class="btn">
                     <button>See More</button>
                     <button>Maak Een Plan</button>
@@ -74,11 +74,11 @@
             </div>
         </div>
         
-        <div class="item" style="background-image: url(/stylesheets/images/arsms.png);">
+        <div class="item" style="background-image: url(/stylesheets/images/adam-wilson-gNzqerPFtWs-unsplash.jpg);">
             <div class="content">
-                <div class="title">ARMEN+2</div>
-                <div class="name">vet gaaf</div>
-                <div class="des">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</div>
+                <h3 class="title">SLIDER</h3>
+                <h4 class="name">info</h4>
+                <p class="des"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</p>
                 <div class="btn">
                     <button>See More</button>
                     <button>Maak Een Plan</button>
@@ -90,8 +90,8 @@
 
     <!-- Next prev button -->
     <div class="arrows">
-        <button class="prev"> Prev </button>
-        <button class="next"> next</button>
+        <button class="prev"> < </button>
+        <button class="next"> > </button>
     </div>
 
     <!-- Time running -->
