--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,10 +17,11 @@
     <Main>
      
     <%-include ('banner.ejs')%> 
+    <%-include ('kaart.ejs')%> 
 
     </Main>
 
     <%-include ('footer.ejs')%> 
   </body>
-
+  <script src="/fit-buddy/public/stylesheets/js/index.js"></script>
 </html>
