--- a/views/kaart.ejs
+++ b/views/kaart.ejs
@@ -4,10 +4,28 @@
     <div class="kaartContainer">
         <div class="kaart">
 
-        <div class="locaties">
-            <p>Amsterdam</p>
-            <p>Arnhem</p>
-        </div>
+            <div class="locaties">
+                <details>
+                    <summary> Amsterdam </summary>
+                    <p>Nieuwe Zijdskolk</p>
+                    <p>Jordaan</p>
+                    <p>De Pijp</p>
+                </details>
+
+                <details>
+                    <summary> Utrecht </summary>
+                    <p>Nieuwe Zijdskolk</p>
+                    <p>Jordaan</p>
+                    <p>De Pijp</p>
+                </details>
+
+                <details>
+                    <summary> Rotterdam </summary>
+                    <p>Nieuwe Zijdskolk</p>
+                    <p>Jordaan</p>
+                    <p>De Pijp</p>
+                </details>
+            </div>
             <p><iframe
                     src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d26305.26515319177!2d4.887011487072169!3d52.37083028519975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1snl!2snl!4v1717784695538!5m2!1snl!2snl"
                     width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
