--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -62,11 +62,11 @@ h1 {
 }
 
 h2 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:  monument extended, sans-serif;
 }
 
 h3 {
-    font-family: open sans bold, sans-serif;
+    font-family: monument extended, sans-serif;
     color: var(--tekst);
 }
 
@@ -94,8 +94,15 @@ a {
    cursor: pointer;
 }
 
+marquee {
+    font-family: monument extended, sans-serif;
+}
+
 /* button styling */
 
+button {
+    font-family:   open sans build, sans-serif;
+}
 
 button:hover{
     cursor: pointer;
