--- a/views/banner.ejs
+++ b/views/banner.ejs
@@ -4,59 +4,59 @@
     <div class="list">
         <div class="item" style="background-image: url(/stylesheets/images/arms.jpeg);">
             <div class="content">
-                <h3 class="title">SLIDER</h3>
-                <h4 class="name">info</h4>
-                <p class="des"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</p>
+                <h3 class="title">TRAIN</h3>
+                <h3 class="name">ARMS</h3>
+                <p class="des">  Train je armen op een leuke manier!</p>
                 <div class="btn">
-                    <button>See More</button>
-                    <button>Maak Een Plan</button>
+                    <button>Meer Informatie</button>
+                    <button>Train Arms</button>
                 </div>
             </div>
         </div>
         
         <div class="item" style="background-image: url(/stylesheets/images/Untitled-14.png);">
             <div class="content">
-                <h3 class="title">SLIDER</h3>
-                <h4 class="name">info</h4>
-                <p class="des"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</p>
+                <h3 class="title">CRUNCHES</h3>
+                <h3 class="name">ABS</h3>
+                <p class="des">Train je abs met deze workout</p>
                 <div class="btn">
-                    <button>See More</button>
-                    <button>Maak Een Plan</button>
+                    <button>Meer Informatie</button>
+                    <button>Train Abs</button>
                 </div>
             </div>
         </div>
         
         <div class="item" style="background-image: url(/stylesheets/images/victor-freitas-WvDYdXDzkhs-unsplash.jpg);">
             <div class="content">
-                <h3 class="title">SLIDER</h3>
-                <h4 class="name">info</h4>
-                <p class="des"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</p>
+                <h3 class="title">Weight</h3>
+                <h3 class="name">Lifting</h3>
+                <p class="des"> Lift zware gewichten met jouw buddy en wordt sterker!</p>
                 <div class="btn">
                     <button>See More</button>
-                    <button>Maak Een Plan</button>
+                    <button>Zoek Buddy</button>
                 </div>
             </div>
         </div>
         
         <div class="item" style="background-image: url(/stylesheets/images/gabin-vallet-J154nEkpzlQ-unsplash.jpg);">
             <div class="content">
-                <h3 class="title">SLIDER</h3>
-                <h4 class="name">info</h4>
-                <p class="des"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</p>
+                <h3 class="title">Train</h3>
+                <h3 class="name">Samen</h3>
+                <p class="des"> Vind een buddy en train buiten met elkaar!</p>
                 <div class="btn">
-                    <button>See More</button>
-                    <button>Maak Een Plan</button>
+                    <button>Meer informatie</button>
+                    <button>Zoek Buddy</button>
                 </div>
             </div>
         </div>
         
         <div class="item" style="background-image: url(/stylesheets/images/abs.jpeg);">
             <div class="content">
-                <h3 class="title">SLIDER</h3>
-                <h4 class="name">info</h4>
+                <h3 class="title">Abs</h3>
+                <h3 class="name">training</h3>
                 <p class="des"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</p>
                 <div class="btn">
-                    <button>See More</button>
+                    <button>Meer Informatie</button>
                     <button>Maak Een Plan</button>
                 </div>
             </div>
@@ -64,11 +64,11 @@
         
         <div class="item" style="background-image: url(/stylesheets/images/luis-reyes-mTorQ9gFfOg-unsplash.jpg);">
             <div class="content">
-                <h3 class="title">SLIDER</h3>
-                <h4 class="name">info</h4>
-                <p class="des"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</p>
+                <h3 class="title">HEAVY</h3>
+                <h3 class="name">WEIGHTS</h3>
+                <p class="des"> Til loei zware gewichten in één van onze gyms en wordt een stuk fitter.</p>
                 <div class="btn">
-                    <button>See More</button>
+                    <button>Meer Informatie</button>
                     <button>Maak Een Plan</button>
                 </div>
             </div>
@@ -76,12 +76,12 @@
         
         <div class="item" style="background-image: url(/stylesheets/images/adam-wilson-gNzqerPFtWs-unsplash.jpg);">
             <div class="content">
-                <h3 class="title">SLIDER</h3>
-                <h4 class="name">info</h4>
-                <p class="des"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum sunt unde ab vel.</p>
+                <h3 class="title">Train</h3>
+                <h3 class="name">Samen</h3>
+                <p class="des"> Gebruik één van onze trainingsruimtes om samen met een groep te gaan trainen!</p>
                 <div class="btn">
-                    <button>See More</button>
-                    <button>Maak Een Plan</button>
+                    <button>Meer informatie</button>
+                    <button>Zoek Buddy</button>
                 </div>
             </div>
         </div>
@@ -97,5 +97,8 @@
     <!-- Time running -->
     <div class="timeRunning"></div>
 </div>
+
+ <marquee  loop="-1" >Welkom bij FitBuddy – Jouw persoonlijke gids naar een gezonder leven! 🎉 Sluit je vandaag nog aan en ontdek hoe je jouw fitnessdoelen kunt bereiken met op maat gemaakte trainingen en voedingsadvies! 💪 #FitBuddy #GezondLeven #FitnessDoelen </marquee>
+ 
 
 <script src="/stylesheets/scripts/banner.js"></script>
