--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Homepagina</title>
     <link rel="stylesheet" href="/stylesheets/styles.css" />
     <link rel="stylesheet" href="/stylesheets/banner.css" />
   </head>
@@ -17,11 +17,15 @@
     <Main>
      
     <%-include ('banner.ejs')%> 
+    <%-include ('waaromons.ejs')%> 
+
     <%-include ('kaart.ejs')%> 
+   
 
     </Main>
 
     <%-include ('footer.ejs')%> 
+    
   </body>
   <script src="/fit-buddy/public/stylesheets/js/index.js"></script>
 </html>
