--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,9 +17,13 @@
     <Main>
      
     <%-include ('banner.ejs')%> 
+
     <%-include ('waaromons.ejs')%> 
 
+    <%-include ('onzetrainers.ejs')%> 
+
     <%-include ('kaart.ejs')%> 
+    
    
 
     </Main>
