--- a/public/stylesheets/banner.css
+++ b/public/stylesheets/banner.css
@@ -8,6 +8,7 @@
     margin-top: -50px;
     overflow: hidden;
     position: relative;
+    z-index: 0;
 }
 
  .carousel .list .item {
@@ -15,7 +16,7 @@
     height: 250px;
     position: absolute;
     top: 8em;
-    transform: translateY(70%);
+    transform: translateY(80%);
     left: 70%;
     border-radius: 5px;
     box-shadow: 0 25px 50px rgba(0, 0, 0, 0.3);
@@ -23,7 +24,6 @@
     background-size: cover;
     z-index: 100;
     transition: 1s;
-
 }
 
 .carousel .list .item:nth-child(1),
@@ -237,6 +237,8 @@
 
 
 
+   
+
    @media screen and (max-width:999px)  {
 
     .item .content{
@@ -247,29 +249,57 @@
         font-size: 70px;
     }
 
+
+
     .content .des {
-        font-size: 16px;
+        font-size: 26px;
     }
 
     
    }
 
-   @media screen and (max-width:690px)  {
+   @media screen and (max-width:770px)  {
 
     .item .content{
         top: 40%;
     }
 
-    .content .title .content .name {
-        font-size: 45px;
+    .content .name {
+        font-size: 10vw;
     }
+
+    .content .title {
+        font-size: 10vw;
+    }
+
+    .content .des {
+        font-size: 5vw;
+    }
+
+
     
     .content .btn button {
         padding: 10px 15px;
         font-size: 14px;
     }
 
-    
 
-    
+    .carousel .list .item {
+        width: 160px;
+        position: absolute;
+        left: 20%;
+        transform: translateY(160%);
+     }
+
+     .carousel .list .item:nth-child(3),
+     .carousel .list .item:nth-child(4),
+     .carousel .list .item:nth-child(5),
+     .carousel .list .item:nth-child(6),
+     .carousel .list .item:nth-child(n+7) {
+         left: 10%;
+        }
+        .carousel .list .item:nth-child(4) {
+            left: 50%;
+        }
+
    }
