--- a/public/stylesheets/waaromons.css
+++ b/public/stylesheets/waaromons.css
@@ -1,6 +1,85 @@
 
 
+
 .containerCard {
+    padding: 2.5em;
+    margin: 0 auto;
+}
+
+.containerCard h3 {
+    font-size: 2em;
+    color: var(--tekst);
+ }
+
+ .containerCard h4 {
+    font-size: 4vw;
+    color: var(--accent-kleur);
+    border-bottom: 1vw solid var(--accent-kleur);
+    padding-bottom: 0.3em;
+    text-transform: uppercase;
+ }
+
+ .containerCard p {
+    font-size: 3.5vw;
+    color: var(--tekst);
+    margin-top: 1em;
+ }
+
+
+
+.card {
+    background-color: rgb(40, 40, 40) ;
+    margin: 1.5em 0 0 0;
+    padding: 1em;
+    height: 35vh;
+    border-radius: 0.3em;
+}
+
+
+@media screen and (min-width: 555px) {
+
+.containerCard h3 {
+    font-size: 3em;
+    color: var(--tekst);
+    margin-left: 5.5vw;
+ }
+
+ .containerCard h4 {
+    font-size: 1vw;
+    color: var(--accent-kleur);
+    border-bottom: 0.3vw solid var(--accent-kleur) !important;
+ }
+
+ .containerCard p {
+    font-size: 1.2vw;
+    color: var(--tekst);
+    margin-top: 0.5em;
+ }
+
+
+.card {
+    background-color: rgb(40, 40, 40) ;
+    margin: 1.5em 0 0 0;
+    padding: 1em;
+    height: 35vh;
+    width: 25vw;
+    border-radius: 0.3em;
+}
+
+    .cards {
+         display: grid;
+         grid-template-columns: 1fr 1fr 1fr;
+         gap: 3em;
+         padding: 0 5em 0 5em;
+       
+
+         display: flex;
+        justify-content: center;
+     }
+}
+
+
+/* .containerCard {
     margin-top: 5em;
     margin: 4em;
     box-shadow: 3px 4px 7px rgba(0, 0, 0, 0.2);
@@ -14,7 +93,6 @@
     padding: 0 1em 0 1em;
     display: flex;
     justify-content: center;
-
 }
 
 .card {
@@ -45,4 +123,4 @@
 .card p{
     margin-top: 0.5em;
     font-size: 1em;
-}
+} */
