--- a/views/onzetrainers.ejs
+++ b/views/onzetrainers.ejs
@@ -6,19 +6,19 @@
 
     <div class="cardTrainers">
         <div class="cardTrainer">
-            <img src="#" alt="">
+            <img src="/stylesheets/images/arsms.jpeg" alt="">
             <h4>Ondersteuning en motivatie</h4>
             <p>FitBuddy biedt op maat gemaakte trainings- </p>
         </div>
 
         <div class="cardTrainer">
-            <img src="#" alt="">
+            <img src="/stylesheets/images/arsms.jpeg" alt="">
             <h4>Ondersteuning en motivatie</h4>
             <p>FitBuddy biedt op maat gemaakte trainings- </p>
         </div>
 
         <div class="cardTrainer">
-            <img src="#" alt="">
+            <img src="/stylesheets/images/arsms.jpeg" alt="">
             <h4>Ondersteuning en motivatie</h4>
             <p>FitBuddy biedt op maat gemaakte trainings- </p>
         </div>
