--- a/views/overzicht.ejs
+++ b/views/overzicht.ejs
@@ -54,7 +54,7 @@
                                 <!-- <svg class="arc">   </svg> -->
                                 <img class="profielfoto" src="/stylesheets/images/trainer2.png" alt="">
                                 <div class="kaart_header_tekst">
-                                    <h3><span class="naam">Bert</span></h3>
+                                    <h3><span class="naam">Fransisca</span></h3>
                                     <p>Beschikbaar op: ma, di , do</p>
                                 </div>
                             </div>
@@ -83,8 +83,8 @@
                                 <img class="profielfoto" src="/stylesheets/images/trainer2.png" alt="">
 
                                 <div class="kaart_header_tekst">
-                                    <h3><span class="naam">Angela</span></h3>
-                                    <p>Beschikbaar op: ma, di , do</p>
+                                    <h3><span class="naam">Jan</span></h3>
+                                    <p>Beschikbaar op: ma, do</p>
                                 </div>
                             </div>
 
@@ -118,7 +118,7 @@
                                 <img class="profielfoto" src="/stylesheets/images/subhaan-saleem-Jf7hr7ZQzg8-unsplash.jpg" alt="">
                                 <div class="kaart_header_tekst">
                                     <h3><span class="naam">Subhaan</span></h3>
-                                    <p>Beschikbaar op: ma, di , do</p>
+                                    <p>Beschikbaar op: do</p>
                                 </div>
                             </div>
                             <div class="skills-container">
@@ -146,7 +146,7 @@
                                 <img class="profielfoto" src="/stylesheets/images/trainer2.png" alt="">
 
                                 <div class="kaart_header_tekst">
-                                    <h3><span class="naam">gela</span></h3>
+                                    <h3><span class="naam">Ryan</span></h3>
                                     <p>Beschikbaar op: ma, di , do</p>
                                 </div>
                             </div>
@@ -180,8 +180,8 @@
                                 <!-- <svg class="arc">   </svg> -->
                                 <img class="profielfoto" src="/stylesheets/images/trainer2.png" alt="">
                                 <div class="kaart_header_tekst">
-                                    <h3><span class="naam">Gert</span></h3>
-                                    <p>Beschikbaar op: ma, di , do</p>
+                                    <h3><span class="naam">Clara</span></h3>
+                                    <p>Beschikbaar op:  di , do</p>
                                 </div>
                             </div>
                             <div class="skills-container">
@@ -210,7 +210,7 @@
 
                                 <div class="kaart_header_tekst">
                                     <h3><span class="naam">Angela</span></h3>
-                                    <p>Beschikbaar op: ma, di , do</p>
+                                    <p>Beschikbaar op: ma, di, do, vr</p>
                                 </div>
                             </div>
 
@@ -243,7 +243,7 @@
                                 <!-- <svg class="arc">   </svg> -->
                                 <img class="profielfoto" src="/stylesheets/images/trainer2.png" alt="">
                                 <div class="kaart_header_tekst">
-                                    <h3><span class="naam">Bert</span></h3>
+                                    <h3><span class="naam">Jasmijn</span></h3>
                                     <p>Beschikbaar op: ma, di , do</p>
                                 </div>
                             </div>
@@ -270,7 +270,7 @@
                                 <!-- <svg class="arc">   </svg> -->
                                 <img class="profielfoto" src="/stylesheets/images/trainer2.png" alt="">
                                 <div class="kaart_header_tekst">
-                                    <h3><span class="naam">Cert</span></h3>
+                                    <h3><span class="naam">Laurent</span></h3>
                                     <p>Beschikbaar op: ma, di , do</p>
                                 </div>
                             </div>
